--- a/server_configs/nginx.conf
+++ b/server_configs/nginx.conf
@@ -26,10 +26,6 @@ http {
     # SSL Settings
     ##
 
-    ssl_protocols             TLSv1 TLSv1.1 TLSv1.2;
-    ssl_ciphers               FIPS@STRENGTH:!aNULL:!eNULL;
-    ssl_prefer_server_ciphers on;
-
     ssl_session_cache shared:SSL:50m;
     ssl_session_timeout 1d;
     ssl_session_tickets off;
@@ -39,7 +35,11 @@ http {
 
     resolver 8.8.8.8 8.8.4.4;
 
-    spdy_headers_comp 9;
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
+    ssl_ecdh_curve secp384r1; # Requires nginx >= 1.1.0
+    resolver_timeout 5s;
 
     ##
     # Logging Settings
