Added support for all file types (audio, video, etc.)

--- a/server_configs/site_config.conf
+++ b/server_configs/site_config.conf
@@ -1,8 +1,8 @@
 server {
-       listen         80;
-       listen    [::]:80;
-       server_name    one-time.nl www.one-time.nl;
-       return         301 https://one-time.nl$request_uri;
+   listen         80;
+   listen    [::]:80;
+   server_name    one-time.nl www.one-time.nl;
+   return         301 https://one-time.nl$request_uri;
 }
 
 server {
@@ -14,7 +14,7 @@ server {
     ssl_dhparam /etc/nginx/ssl/dhparam.pem;
 
     add_header Strict-Transport-Security "max-age=63072000; includeSubdomains;" always;
-    add_header Content-Security-Policy "default-src 'none'; script-src 'self'; img-src 'self' data:; style-src 'self' 'unsafe-inline'; connect-src 'self'" always;
+    add_header Content-Security-Policy "default-src 'none'; script-src 'self'; img-src 'self' data:; media-src 'self' data:; style-src 'self' 'unsafe-inline'; connect-src 'self'" always;
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-Xss-Protection "1; mode=block" always;
     add_header X-Content-Type-Options "nosniff" always;
@@ -25,20 +25,20 @@ server {
 }
 
 server {
-    listen 443 ssl http2 default_server;
-    listen [::]:443 ssl http2 default_server;
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
 
     ssl_certificate /etc/letsencrypt/live/one-time.nl/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/one-time.nl/privkey.pem;
     ssl_dhparam /etc/nginx/ssl/dhparam.pem;
 
-    root /var/www/html;
+    root /var/www/one-time.nl;
     index index.php index.html index.htm index.nginx-debian.html;
 
     server_name one-time.nl;
 
     add_header Strict-Transport-Security "max-age=63072000; includeSubdomains;" always;
-    add_header Content-Security-Policy "default-src 'none'; script-src 'self'; img-src 'self' data:; style-src 'self' 'unsafe-inline'; connect-src 'self'" always;
+    add_header Content-Security-Policy "default-src 'none'; script-src 'self'; img-src 'self' data:; media-src 'self' data:; style-src 'self' 'unsafe-inline'; connect-src 'self'" always;
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-Xss-Protection "1; mode=block" always;
     add_header X-Content-Type-Options "nosniff" always;
